[gd_scene load_steps=5 format=3 uid="uid://cj6led5eh25bo"]

[ext_resource type="Script" uid="uid://b2mu4wa0kab1a" path="res://addons/gdquest_model_viewer_3d/viewer/ui/model_selector/model_selector.gd" id="1_8owei"]
[ext_resource type="PackedScene" uid="uid://bfs31qyude6h2" path="res://addons/gdquest_model_viewer_3d/viewer/ui/model_selector/model_tag.tscn" id="2_botqh"]
[ext_resource type="Script" uid="uid://s6pt8fqmklcm" path="res://addons/gdquest_model_viewer_3d/viewer/ui/model_selector/bubble_scroll.gd" id="3_8hjj3"]

[sub_resource type="Theme" id="Theme_b1ojb"]

[node name="ModelSelector" type="VBoxContainer"]
clip_contents = true
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = -132.0
offset_right = 233.0
offset_bottom = -32.0
grow_vertical = 0
mouse_force_pass_scroll_events = false
alignment = 2
script = ExtResource("1_8owei")
model_tag_scene = ExtResource("2_botqh")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_b1ojb")
script = ExtResource("3_8hjj3")

[node name="TagList" type="VBoxContainer" parent="ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 0
theme_override_constants/separation = 8

[node name="ModelTag" parent="." instance=ExtResource("2_botqh")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="ModelTag" to="." method="_on_model_tag_pressed"]
